syntax = "proto3";

import "auth.proto";
import "host.proto";

option go_package = "./;db";

// TiDB Cloud Platform database service
service TiCPDBService {
    // Auth Module
	rpc FindTenant(FindTenantRequest) returns (FindTenantResponse);
	rpc FindAccount(FindAccountRequest) returns (FindAccountResponse);
	rpc SaveToken(SaveTokenRequest) returns (SaveTokenResponse);
	rpc FindToken(FindTokenRequest) returns (FindTokenResponse);
	rpc FindRolesByPermission(FindRolesByPermissionRequest) returns (FindRolesByPermissionResponse);

    // Host Module
	rpc AddHost(AddHostRequest) returns (AddHostResponse);
	rpc RemoveHost(RemoveHostRequest) returns (RemoveHostResponse);
	rpc ListHost(ListHostsRequest) returns (ListHostsResponse);
	rpc CheckDetails(CheckDetailsRequest) returns (CheckDetailsResponse);
	rpc AllocHosts(AllocHostsRequest) returns (AllocHostResponse);
}
